added deletion of comments, only for moderators

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The New York Times</title>
     <link rel="stylesheet" href="static/styles.css">
+    <script>window.user_name = "{{ user_name }}";</script>
     <script type="module" src="static/main.js" defer></script>
 </head>
 <body>
