--- a/templates/index.html
+++ b/templates/index.html
@@ -105,14 +105,18 @@
     <main class="container">
         <div id="comments-sidebar">
             <button id="close-sidebar">&times;</button>
-            <h3>Comments</h3>
-            <input type="hidden" id="article-id" name="article_id">
-            <div id="comments-list"></div>
-            <form id="comment-form">
-              <textarea id="comment-input" placeholder = "leave a comment!" required></textarea>
-              <button type="submit">post</button>
-            </form>
-          </div>
+            <div class="comments-header">
+                <h3>Comments</h3>
+            </div>
+            <div class="comments-content">
+                <input type="hidden" id="article-id" name="article_id">
+                <div id="comments-list"></div>
+                <form id="comment-form">
+                    <textarea id="comment-input" placeholder="Leave a comment!" required></textarea>
+                    <button type="submit">Post Comment</button>
+                </form>
+            </div>
+        </div>
         <section class="left-column">
         </section>
         <section class="main-column">
